implemented devise gem and set up user db

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -34,7 +34,7 @@
     <section class="section tile is-child">
       <h1 class="title">New Player</h1>
       <h2 class="subtitle">Register yourself.</h2>
-      <%= link_to 'Sign up', new_user_path, class:"button is-link" %>
+      <%= link_to 'Sign up', new_user_registration_path, class:"button is-link" %>
     </section>
     <section class="section tile is-child">
       <h1 class="title">New Team</h1>
