--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -27,7 +27,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <%= link_to 'Sign up', new_user_path, class:"button is-link" %>
+          <%= link_to 'Sign up', new_user_registration_path, class:"button is-link" %>
           <a class="button is-light">
             Log in
           </a>
