--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
         <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+        <script src="https://kit.fontawesome.com/15bf14292c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
